# SALESFORCE_ANALYTICS_STACK

./: .gitignore  Makefile
.github/workflows/: dbt_ci.yml
salesforce_dbt/: .gitignore  .sqlfluff  README.md  dbt_project.yml  packages.yml
salesforce_dbt/.github/workflows/: dbt_ci.yml
salesforce_dbt/analyses/: pipeline_coverage_by_quarter.sql
salesforce_dbt/macros/: generate_schema_name.sql  grants.sql  incremental_utils.sql  staging_utils.sql  test_not_negative.sql
salesforce_dbt/models/marts/core/: _core.yml  dim_account.sql  dim_campaign.sql  dim_contact.sql  dim_date.sql  dim_lead.sql  dim_user.sql
salesforce_dbt/models/marts/exposures/: exposures.yml
salesforce_dbt/models/marts/marketing/: _marketing.yml  fct_campaign_performance.sql  fct_demand_generation.sql
salesforce_dbt/models/marts/sales/: _sales.yml  fct_bookings.sql  fct_sales_pipeline.sql  fct_win_rate.sql
salesforce_dbt/models/staging/salesforce/: _sources.yml  _sources_notes.txt  _staging_salesforce.yml  stg_salesforce__accounts.sql  stg_salesforce__campaign_members.sql  stg_salesforce__campaigns.sql  stg_salesforce__contacts.sql  stg_salesforce__events.sql  stg_salesforce__leads.sql  stg_salesforce__opportunities.sql  stg_salesforce__opportunity_line_items.sql  stg_salesforce__tasks.sql  stg_salesforce__users.sql
salesforce_dbt/seeds/: _seeds.yml  bookings_targets.csv  salesforce_stage_order.csv
salesforce_dbt/snapshots/: snap_salesforce__accounts.sql  snap_salesforce__contacts.sql  snap_salesforce__leads.sql  snap_salesforce__opportunities.sql
salesforce_dbt/tests/: assert_bookings_in_win_rate.sql  assert_closed_won_not_in_pipeline.sql  assert_no_amount_without_close_date.sql
salesforce_ingest/: README.md  pyproject.toml
salesforce_ingest/.github/workflows/: deploy_infra.yml
salesforce_ingest/cdk/: app.py  cdk.json  requirements.txt
salesforce_ingest/cdk/stacks/: __init__.py  codebuild_construct.py  glue_construct.py  ingestion_stack.py  pipeline_orchestrator.py
salesforce_ingest/codebuild/: buildspec.yml
salesforce_ingest/glue/: salesforce_bulk_extract.py
salesforce_ingest/lambda/dbt_runner/: handler.py
salesforce_ingest/lambda/extractor/: handler.py  requirements.txt  salesforce_client.py  watermark.py
salesforce_ingest/lambda/pipe_monitor/: handler.py
salesforce_ingest/lambda/pipe_poller/: handler.py
salesforce_ingest/scripts/: ops.py
salesforce_ingest/snowflake/: 00_rbac_setup.sql  01_storage_integration.sql  02_schema_stage_format.sql  03_raw_tables.sql  04_snowpipes.sql  05_dedup_tasks.sql  06_dedup_views.sql  07_dbt_sources_update.yml  08_monitoring_queries.sql
salesforce_ingest/tests/: conftest.py
salesforce_ingest/tests/integration/: test_pipeline_e2e.py
salesforce_ingest/tests/unit/: test_extractor.py  test_pipe_poller.py
